--- a/depmap_web_explainer/depmap_explainer.html
+++ b/depmap_web_explainer/depmap_explainer.html
@@ -6,9 +6,19 @@
 <!--     <link href="static/style.css" rel="stylesheet" type="text/css" /> -->
 
     <!-- LINKS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+    
     <link rel="stylesheet" type="text/css" href="https://selectize.github.io/selectize.js/css/styles.css">
     <link rel="stylesheet" type="text/css" href="https://selectize.github.io/selectize.js/css/selectize.default.css">
-<!--     <link rel="stylesheet" href="static/bower_components/bootstrap/dist/css/bootstrap.css" />
+    <!-- <link rel="stylesheet" href="static/bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="static/bower_components/bootstrap-select/dist/css/bootstrap-select.css" />
     <link rel="stylesheet" href="static/bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.css" /> -->
 
@@ -31,7 +41,11 @@
 </script>
  -->
 <body>
-    <h2>INDRA Evidence Network</h2>
+    <div class="container">
+    <div class="jumbotron">
+        <h1>INDRA Evidence Network</h1>
+    </div>
+
     <p>Click on the dropdown button to access a searchable dropdown menu of HGNC gene names.</p>
     <div class="dropdown" style="width: 520px; top: 36px; left: 0px; visibility: visible;">
     <div class="control-group">
@@ -70,4 +84,5 @@
     <h4>Shared regulator</h4>
     <div id="expl_x_is_upstream"></div>
 </body>
+</div>
 </html>
