--- a/depmap_web_explainer/depmap_explainer.html
+++ b/depmap_web_explainer/depmap_explainer.html
@@ -85,11 +85,11 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseAcB">
                             Complex <div id="A_complex" style="display:inline-block;">A</div> <div id="B_complex" style="display:inline-block;">B</div>
-                           <span id="collapseAcB_ev_count" class="badge badge-default float-right">0</span>
+                           <span id="collapseAcB_ev_count" class="badge badge-default float-right">Statements: 0</span>
                         </a>
                     </h4>
 
-                   </div>
+                    </div>
 
                     <div id="collapseAcB" class="panel-collapse collapse">
                         <div id="expl_A_complex_B">&nbsp;</div>
@@ -101,11 +101,11 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseAB">
                             <div id="A_AtoB" style="display:inline-block;">A</div> &rarr; <div id="B_AtoB" style="display:inline-block;">B</div>
-                            <span id="collapseAB_ev_count" class="badge badge-default float-right">0</span>
+                            <span id="collapseAB_ev_count" class="badge badge-default float-right">Statements: 0</span>
                         </a>
                     </h4>
 
-                   </div>
+                    </div>
 
                     <div id="collapseAB" class="panel-collapse collapse">
                         <div id="expl_A_to_B">&nbsp;</div>
@@ -116,30 +116,13 @@
 
                     <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapseAXB">
-                            <div id="A_AXB" style="display:inline-block;">A</div> &rarr; <div id="X_AXB" style="display:inline-block;">X</div> &rarr; <div id="B_AXB" style="display:inline-block;">B</div>
-                            <span id="collapseAXB_ev_count" class="badge badge-default float-right">0</span>
-                        </a>
-                    </h4>
-
-                   </div>
-
-                    <div id="collapseAXB" class="panel-collapse collapse">
-                        <div id="expl_A_to_X_to_B">&nbsp;</div>
-                    </div>
-                </div>
-
-                <div class="panel panel-default">
-
-                    <div class="panel-heading">
-                    <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseBA">
                             <div id="B_BtoA" style="display:inline-block;">B</div> &rarr; <div id="A_BtoA" style="display:inline-block;">A</div>
-                            <span id="collapseBA_ev_count" class="badge badge-default float-right">0</span>
+                            <span id="collapseBA_ev_count" class="badge badge-default float-right">Statements: 0</span>
                         </a>
                     </h4>
 
-                   </div>
+                    </div>
 
                     <div id="collapseBA" class="panel-collapse collapse">
                         <div id="expl_B_to_A">&nbsp;</div>
@@ -150,13 +133,30 @@
 
                     <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapseBXA">
-                            <div id="B_BXA" style="display:inline-block;">B</div> &rarr; <div id="X_BXA" style="display:inline-block;">X</div> &rarr; <div id="A_BXA" style="display:inline-block;">A</div>
-                            <span id="collapseBXA_ev_count" class="badge badge-default float-right">0</span>
+                        <a data-toggle="collapse" href="#collapseAXB">
+                            <div id="A_AXB" style="display:inline-block;">A</div> &rarr; <div id="X_AXB" style="display:inline-block;">X</div> &rarr; <div id="B_AXB" style="display:inline-block;">B</div>
+                            <span id="collapseAXB_ev_count" class="badge badge-default float-right">X: 0</span>
                         </a>
                     </h4>
 
-                   </div>
+                    </div>
+
+                    <div id="collapseAXB" class="panel-collapse collapse">
+                        <div id="expl_A_to_X_to_B">&nbsp;</div>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+
+                    <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapseBXA">
+                            <div id="B_BXA" style="display:inline-block;">B</div> &rarr; <div id="X_BXA" style="display:inline-block;">X</div> &rarr; <div id="A_BXA" style="display:inline-block;">A</div>
+                            <span id="collapseBXA_ev_count" class="badge badge-default float-right">X: 0</span>
+                        </a>
+                    </h4>
+
+                    </div>
 
                     <div id="collapseBXA" class="panel-collapse collapse">
                         <div id="expl_B_to_X_to_A">&nbsp;</div>
@@ -169,11 +169,11 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapse_st">
                             Shared target (<div id="A_ABtoX" style="display:inline-block;">A</div> &rarr; <div id="X_ABtoX" style="display:inline-block;">X</div> &larr; <div id="B_ABtoX" style="display:inline-block;">B</div>)
-                           <span id="collapse_st_X_count" class="badge badge-default float-right">0</span>
+                            <span id="collapse_st_X_count" class="badge badge-default float-right">X: 0</span>
                         </a>
                     </h4>
 
-                   </div>
+                    </div>
 
                     <div id="collapse_st" class="panel-collapse collapse">
                         <div id="expl_x_is_downstream">&nbsp;</div>
@@ -186,11 +186,11 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapse_sr">
                             Shared regulator (<div id="A_XtoAB" style="display:inline-block;">A</div> &larr; <div id="X_XtoAB" style="display:inline-block;">X</div> &rarr; <div id="B_XtoAB" style="display:inline-block;">B</div>)
-                           <span id="collapse_sr_X_count" class="badge badge-default float-right">0</span>
+                            <span id="collapse_sr_X_count" class="badge badge-default float-right">X: 0</span>
                         </a>
                     </h4>
 
-                   </div>
+                    </div>
 
                     <div id="collapse_sr" class="panel-collapse collapse">
                         <div id="expl_x_is_upstream">&nbsp;</div>
@@ -199,7 +199,7 @@
             </div>
         </div>
     </div>
- </div>
+</div>
 </body>
 </div>
 </html>
