--- a/depmap_web_explainer/depmap_explainer.html
+++ b/depmap_web_explainer/depmap_explainer.html
@@ -85,7 +85,7 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseAcB">
                             Complex <div id="A_complex" style="display:inline-block;">A</div> <div id="B_complex" style="display:inline-block;">B</div>
-                           <span id="collapseAcB_ev_count" class="badge badge-default float-right">Statements: 0</span>
+                           <span id="collapseAcB_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">Statements: 0</span>
                         </a>
                     </h4>
 
@@ -101,7 +101,7 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseAB">
                             <div id="A_AtoB" style="display:inline-block;">A</div> &rarr; <div id="B_AtoB" style="display:inline-block;">B</div>
-                            <span id="collapseAB_ev_count" class="badge badge-default float-right">Statements: 0</span>
+                            <span id="collapseAB_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">Statements: 0</span>
                         </a>
                     </h4>
 
@@ -118,7 +118,7 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseBA">
                             <div id="B_BtoA" style="display:inline-block;">B</div> &rarr; <div id="A_BtoA" style="display:inline-block;">A</div>
-                            <span id="collapseBA_ev_count" class="badge badge-default float-right">Statements: 0</span>
+                            <span id="collapseBA_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">Statements: 0</span>
                         </a>
                     </h4>
 
@@ -135,7 +135,7 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseAXB">
                             <div id="A_AXB" style="display:inline-block;">A</div> &rarr; <div id="X_AXB" style="display:inline-block;">X</div> &rarr; <div id="B_AXB" style="display:inline-block;">B</div>
-                            <span id="collapseAXB_ev_count" class="badge badge-default float-right">X: 0</span>
+                            <span id="collapseAXB_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
                         </a>
                     </h4>
 
@@ -152,7 +152,7 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseBXA">
                             <div id="B_BXA" style="display:inline-block;">B</div> &rarr; <div id="X_BXA" style="display:inline-block;">X</div> &rarr; <div id="A_BXA" style="display:inline-block;">A</div>
-                            <span id="collapseBXA_ev_count" class="badge badge-default float-right">X: 0</span>
+                            <span id="collapseBXA_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
                         </a>
                     </h4>
 
@@ -169,7 +169,7 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapse_st">
                             Shared target (<div id="A_ABtoX" style="display:inline-block;">A</div> &rarr; <div id="X_ABtoX" style="display:inline-block;">X</div> &larr; <div id="B_ABtoX" style="display:inline-block;">B</div>)
-                            <span id="collapse_st_X_count" class="badge badge-default float-right">X: 0</span>
+                            <span id="collapse_st_X_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
                         </a>
                     </h4>
 
@@ -186,7 +186,7 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapse_sr">
                             Shared regulator (<div id="A_XtoAB" style="display:inline-block;">A</div> &larr; <div id="X_XtoAB" style="display:inline-block;">X</div> &rarr; <div id="B_XtoAB" style="display:inline-block;">B</div>)
-                            <span id="collapse_sr_X_count" class="badge badge-default float-right">X: 0</span>
+                            <span id="collapse_sr_X_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
                         </a>
                     </h4>
 
