--- a/depmap_web_explainer/depmap_explainer.html
+++ b/depmap_web_explainer/depmap_explainer.html
@@ -75,15 +75,15 @@
                         <a data-toggle="collapse" href="#collapseAcB">
                             Complex <div id="A_complex" style="display:inline-block;">A</div> <div id="B_complex" style="display:inline-block;">B</div>
                            <span id="collapseAcB_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">Statements: 0</span>
+                            <div id="AB_output_complex"></div>
                         </a>
                     </h4>
-
                     </div>
-
                     <div id="collapseAcB" class="panel-collapse collapse">
                         <div id="expl_A_complex_B">&nbsp;</div>
                     </div>
                 </div>
+
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -91,6 +91,7 @@
                         <a data-toggle="collapse" href="#collapseAB">
                             <div id="A_AtoB" style="display:inline-block;">A</div> &rarr; <div id="B_AtoB" style="display:inline-block;">B</div>
                             <span id="collapseAB_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">Statements: 0</span>
+                            <div id="AB_output_AB"></div>
                         </a>
                     </h4>
 
@@ -101,90 +102,90 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default">
 
+                <div class="panel panel-default">
                     <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseBA">
                             <div id="B_BtoA" style="display:inline-block;">B</div> &rarr; <div id="A_BtoA" style="display:inline-block;">A</div>
                             <span id="collapseBA_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">Statements: 0</span>
+                            <div id="BA_output_BA"></div>
                         </a>
                     </h4>
-
                     </div>
-
                     <div id="collapseBA" class="panel-collapse collapse">
                         <div id="expl_B_to_A">&nbsp;</div>
                     </div>
                 </div>
 
-                <div class="panel panel-default">
 
+                <div class="panel panel-default">
                     <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseAXB">
                             <div id="A_AXB" style="display:inline-block;">A</div> &rarr; <div id="X_AXB" style="display:inline-block;">X</div> &rarr; <div id="B_AXB" style="display:inline-block;">B</div>
                             <span id="collapseAXB_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
+                            <div id="AX_output_AXB"></div>
+                            <div id="XB_output_AXB"></div>
                         </a>
                     </h4>
-
                     </div>
-
                     <div id="collapseAXB" class="panel-collapse collapse">
                         <div id="expl_A_to_X_to_B">&nbsp;</div>
                     </div>
                 </div>
 
-                <div class="panel panel-default">
 
+                <div class="panel panel-default">
                     <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseBXA">
                             <div id="B_BXA" style="display:inline-block;">B</div> &rarr; <div id="X_BXA" style="display:inline-block;">X</div> &rarr; <div id="A_BXA" style="display:inline-block;">A</div>
                             <span id="collapseBXA_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
+                            <div id="BX_output_BXA"></div>
+                            <div id="XA_output_BXA"></div>
                         </a>
                     </h4>
-
                     </div>
-
                     <div id="collapseBXA" class="panel-collapse collapse">
                         <div id="expl_B_to_X_to_A">&nbsp;</div>
                     </div>
                 </div>
 
-                <div class="panel panel-default">
 
+                <div class="panel panel-default">
                     <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapse_st">
                             Shared target (<div id="A_ABtoX" style="display:inline-block;">A</div> &rarr; <div id="X_ABtoX" style="display:inline-block;">X</div> &larr; <div id="B_ABtoX" style="display:inline-block;">B</div>)
                             <span id="collapse_st_X_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
+                            <div id="AX_output_ABtoX"></div>
+                            <div id="XB_output_ABtoX"></div>
                         </a>
                     </h4>
-
                     </div>
-
                     <div id="collapse_st" class="panel-collapse collapse">
                         <div id="expl_x_is_downstream">&nbsp;</div>
                     </div>
                 </div>
 
-                <div class="panel panel-default">
 
+                <div class="panel panel-default">
                     <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapse_sr">
                             Shared regulator (<div id="A_XtoAB" style="display:inline-block;">A</div> &larr; <div id="X_XtoAB" style="display:inline-block;">X</div> &rarr; <div id="B_XtoAB" style="display:inline-block;">B</div>)
                             <span id="collapse_sr_X_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
+                            <div id="AX_output_XtoAB"></div>
+                            <div id="XB_output_XtoAB"></div>
                         </a>
                     </h4>
-
                     </div>
-
                     <div id="collapse_sr" class="panel-collapse collapse">
                         <div id="expl_x_is_upstream">&nbsp;</div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
