Updating direct output is resolved. Intermediate output is not.

--- a/depmap_web_explainer/depmap_explainer.html
+++ b/depmap_web_explainer/depmap_explainer.html
@@ -125,13 +125,15 @@
                         <a data-toggle="collapse" href="#collapseAXB">
                             <div id="A_AXB" style="display:inline-block;">A</div> &rarr; <div id="X_AXB" style="display:inline-block;">X</div> &rarr; <div id="B_AXB" style="display:inline-block;">B</div>
                             <span id="collapseAXB_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
-                            <div id="AX_output_AXB"></div>
-                            <div id="XB_output_AXB"></div>
+                            <div id="AXB_dropdown"></div>
                         </a>
                     </h4>
                     </div>
                     <div id="collapseAXB" class="panel-collapse collapse">
-                        <div id="expl_A_to_X_to_B">&nbsp;</div>
+                        <div id="expl_A_to_X_to_B">&nbsp;
+                            <div id="AX_output_AXB"></div>
+                            <div id="XB_output_AXB"></div>
+                        </div>
                     </div>
                 </div>
 
@@ -142,6 +144,7 @@
                         <a data-toggle="collapse" href="#collapseBXA">
                             <div id="B_BXA" style="display:inline-block;">B</div> &rarr; <div id="X_BXA" style="display:inline-block;">X</div> &rarr; <div id="A_BXA" style="display:inline-block;">A</div>
                             <span id="collapseBXA_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
+                            <div id="BXA_dropdown"></div>
                             <div id="BX_output_BXA"></div>
                             <div id="XA_output_BXA"></div>
                         </a>
@@ -159,6 +162,7 @@
                         <a data-toggle="collapse" href="#collapse_st">
                             Shared target (<div id="A_ABtoX" style="display:inline-block;">A</div> &rarr; <div id="X_ABtoX" style="display:inline-block;">X</div> &larr; <div id="B_ABtoX" style="display:inline-block;">B</div>)
                             <span id="collapse_st_X_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
+                            <div id="ABtoX_dropdown"></div>
                             <div id="AX_output_ABtoX"></div>
                             <div id="XB_output_ABtoX"></div>
                         </a>
@@ -176,6 +180,7 @@
                         <a data-toggle="collapse" href="#collapse_sr">
                             Shared regulator (<div id="A_XtoAB" style="display:inline-block;">A</div> &larr; <div id="X_XtoAB" style="display:inline-block;">X</div> &rarr; <div id="B_XtoAB" style="display:inline-block;">B</div>)
                             <span id="collapse_sr_X_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
+                            <div id="XtoAB_dropdown"></div>
                             <div id="AX_output_XtoAB"></div>
                             <div id="XB_output_XtoAB"></div>
                         </a>
